--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -46,7 +46,7 @@
                 <span style="display: inline-block; margin-top: 0.5rem;">File #{{ client.file_number }}</span>
             </div>
         </div>
-        <a href="{{ url_for('clients.index') }}" class="btn">← Back</a>
+        <a href="{{ url_for('clients.index') }}" class="btn"><i data-lucide="arrow-left" style="width: 16px; height: 16px;"></i> Back</a>
     </div>
     
     {# Profile Entry - Always at top if exists #}
