UI consistency: Standardize back buttons to use Lucide icon

--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -96,7 +96,7 @@
     
     <!-- Bottom buttons -->
     <div class="bottom-buttons">
-        <a href="{{ url_for('clients.index') }}" class="btn-back"><i data-lucide="arrow-left" style="width: 16px; height: 16px;"></i> Back</a>
+        <a href="{{ url_for('clients.index') }}" class="btn"><i data-lucide="arrow-left" style="width: 16px; height: 16px;"></i> Back</a>
     </div>
 </div>
 
