--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -80,6 +80,6 @@
         Click any row to edit. Custom types can be renamed, recoloured, or deleted (if no clients assigned).
     </small>
     
-    <a href="{{ url_for('clients.index') }}" class="btn">← Back</a>
+    <a href="{{ url_for('clients.index') }}" class="btn"><i data-lucide="arrow-left" style="width: 16px; height: 16px;"></i> Back</a>
 </div>
 {% endblock %}
