--- a/web/templates/ledger_report.html
+++ b/web/templates/ledger_report.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="card" style="max-width: 700px;">
+<div class="card" style="max-width: 700px; margin: 0 auto;">
     <!-- Header -->
     <div class="report-header">
         <div>
