--- a/web/templates/schedule_form.html
+++ b/web/templates/schedule_form.html
@@ -4,6 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/schedule_form.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/pickers.css') }}">
 {% endblock %}
 
 {% block content %}
@@ -45,33 +46,9 @@
         <!-- Date and Time -->
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; margin-bottom: 1.5rem;">
             <div class="form-group">
-                <label for="year">Date *</label>
-                <div class="date-input-group">
-                    <select id="year" name="year" required>
-                        <option value="">Year</option>
-                        {% for year in range(today_year + 2, today_year - 2, -1) %}
-                        <option value="{{ year }}" {% if year == today_year %}selected{% endif %}>
-                            {{ year }}
-                        </option>
-                        {% endfor %}
-                    </select>
-                    <select id="month" name="month" required>
-                        <option value="">Month</option>
-                        {% for month in range(1, 13) %}
-                        <option value="{{ month }}" {% if month == today_month %}selected{% endif %}>
-                            {{ '%02d'|format(month) }}
-                        </option>
-                        {% endfor %}
-                    </select>
-                    <select id="day" name="day" required>
-                        <option value="">Day</option>
-                        {% for day in range(1, 32) %}
-                        <option value="{{ day }}" {% if day == today_day %}selected{% endif %}>
-                            {{ '%02d'|format(day) }}
-                        </option>
-                        {% endfor %}
-                    </select>
-                </div>
+                <label>Date *</label>
+                <div id="schedule-date-picker"></div>
+                <input type="hidden" id="schedule_date" name="date" value="{{ today_year }}-{{ '%02d'|format(today_month) }}-{{ '%02d'|format(today_day) }}" required>
             </div>
             <div class="form-group">
                 <label for="appointment_time">Time *</label>
@@ -168,8 +145,18 @@
     </div>
 </div>
 
+<!-- Hidden data for JavaScript -->
+<script id="schedule-data" type="application/json">
+{
+    "todayYear": {{ today_year }},
+    "todayMonth": {{ today_month }},
+    "todayDay": {{ today_day }}
+}
+</script>
+
 {% endblock %}
 
 {% block extra_js %}
+<script src="{{ url_for('static', filename='js/pickers.js') }}"></script>
 <script src="{{ url_for('static', filename='js/schedule_form.js') }}"></script>
 {% endblock %}
